--- a/Models/Random Forest.ipynb
+++ b/Models/Random Forest.ipynb
@@ -935,7 +935,52 @@
     "ed_lvl=le_education.inverse_transform([unseen[0][2]])\n",
     "gender=le_gender.inverse_transform([unseen[0][1]])\n",
     "\n",
-    "print(f\"The predicted salary is {unseen_pred[0]} for: \\n Age: {unseen[0][0]}\\n Gender: {gender[0]} \\n Education Level: {ed_lvl[0]}\\n Years of Experience: {unseen[0][3]} \")"
+    "print(f\"The predicted salary is {unseen_pred[0]} for: \\n Age: {unseen[0][0]}\\n Gender: {gender[0]} \\n Education Level: {ed_lvl[0]}\\n Years of Experience: {unseen[0][3]}\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alternative to the above code (instead of modifying the unseen matrix, user input is required from console)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The predicted salary is 56408.22249784172 for:\n",
+      "Age: 27\n",
+      "Gender: Male\n",
+      "Education Level: Master's\n",
+      "Years of Experience: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Alternative to the above, by asking user to directly input into a console the values.\n",
+    "# Testing on unseen data\n",
+    "age = int(input(\"Enter the age: \"))\n",
+    "gender_input = int(input(\"Enter the gender (0 for female, 1 for male, 2 for other): \"))\n",
+    "education_input = int(input(\"Enter the education level (0 for High School, 1 for Bachelor's, 2 for Master's, 3 for PhD): \"))\n",
+    "experience = int(input(\"Enter the years of experience: \"))\n",
+    "\n",
+    "unseen = [[age, gender_input, education_input, experience]]\n",
+    "unseen_pred = model.predict(unseen)\n",
+    "ed_lvl = le_education.inverse_transform([education_input])\n",
+    "gender = le_gender.inverse_transform([gender_input])\n",
+    "\n",
+    "print(f\"The predicted salary is {unseen_pred[0]} for:\")\n",
+    "print(f\"Age: {age}\")\n",
+    "print(f\"Gender: {gender[0]}\")\n",
+    "print(f\"Education Level: {ed_lvl[0]}\")\n",
+    "print(f\"Years of Experience: {experience}\")\n"
    ]
   }
  ],
