--- a/Models/XGBoost Classifier Model.ipynb
+++ b/Models/XGBoost Classifier Model.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "<h1>XGBoost.</h1><br>\n",
-    "WIP"
+    "Using the Housing dataset: https://www.kaggle.com/datasets/harishkumardatalab/housing-price-prediction"
    ]
   },
   {
