--- a/Models/Linear Regression and DecisionTreeClassifier.ipynb
+++ b/Models/Linear Regression and DecisionTreeClassifier.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,6 +26,7 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import warnings\n",
     "\n",
     "df=pd.read_csv('../Datasets/wineQT.csv')\n",
     "df=df.drop('Id', axis=1)\n",
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +184,7 @@
        "4      9.4        5  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -227,15 +228,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared error:  0.12159163422569307\n",
-      "Mean Absolute error:  0.08930971064255623\n"
+      "Mean Squared error:  0.11148401131235335\n",
+      "Mean Absolute error:  0.08144256147551669\n"
      ]
     }
    ],
@@ -277,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -331,25 +332,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The predicted Quality using the Decision Tree Classifier is:  [5]\n",
-      "The predicted PH using the Linear Regression model is:  [3.35933173]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\devix\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\base.py:439: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\devix\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\base.py:439: UserWarning: X does not have valid feature names, but DecisionTreeClassifier was fitted with feature names\n",
-      "  warnings.warn(\n"
+      "The predicted Quality using the Decision Tree Classifier is:  [6]\n",
+      "The predicted PH using the Linear Regression model is:  [3.35720975]\n"
      ]
     }
    ],
@@ -360,8 +351,12 @@
     "# Predict the pH level using Linear Regression\n",
     "wine_ph=[[7.5, 0.5, 0.2]]\n",
     "\n",
-    "phlevel=model.predict(wine_ph)\n",
-    "quality=clf.predict(wine_qt)\n",
+    "\n",
+    "import warnings\n",
+    "with warnings.catch_warnings():\n",
+    "    warnings.simplefilter(\"ignore\")\n",
+    "    phlevel=model.predict(wine_ph)\n",
+    "    quality=clf.predict(wine_qt)\n",
     "\n",
     "print(\"The predicted Quality using the Decision Tree Classifier is: \",quality)\n",
     "print(\"The predicted PH using the Linear Regression model is: \",phlevel)"
@@ -377,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
